# python-tools

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
doc/: APIClientRegen.md
scripts/: apn_set.py  device_kv_update.py  elf_task_schedules.py  mqtt_read.py  reboot_count_reset.py
scripts/custom_tools/: custom_tool.py
src/infuse_iot/: __init__.py  argparse.py  commands.py  common.py  cpatch.py  credentials.py  crypto.py  database.py  diff.py  epacket.py  example.pem  rpc_client.py  serial_comms.py  socket_comms.py  tdf.py  time.py
src/infuse_iot/api_client/: README.md
src/infuse_iot/app/: main.py
src/infuse_iot/definitions/: kv.py  rpc.py  tdf.py
src/infuse_iot/epacket/: common.py  interface.py  packet.py
src/infuse_iot/rpc_wrappers/: annotate.py  application_info.py  bt_connect_infuse.py  bt_disconnect.py  bt_file_copy_coap.py  coap_download.py  data_logger_erase.py  data_logger_read.py  data_logger_state.py  epacket_udp_reconnect.py  fault.py  file_write_basic.py  gravity_reference_update.py  heap_stats.py  infuse_states_query.py  infuse_states_update.py  kv_bt_peer.py  kv_read.py  kv_reflect_crcs.py  kv_write.py  last_reboot.py  lte_at_cmd.py  lte_modem_info.py  lte_pdp_ctx.py  lte_state.py  lte_state_v2.py  reboot.py  sym_read.py  (+11 more)
tests/: test_commands.py  test_cpatch.py  test_help.py  test_main.py  test_socket_comms.py
tests/tdf/: test_tdf.py
tests/util/: test_argparse.py  test_crc.py  test_ctypes.py  test_threading.py  test_time.py  test_version.py
(+242 files in other folders)
